updated colors for gameboard background and players

--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
@@ -16,11 +16,19 @@
         android:text="Test's Turn"
         android:id="@+id/hotseatCurrentPlayerTextView"/>
 
+    <SurfaceView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/hotseatCurrentPlayerTextView"
+        android:layout_above="@+id/hotseatPlayerControlsLayout"
+        android:background="@color/charcoal_hotseat_background"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/hotseatPlayerControlsLayout">
 
         <Button
             android:layout_width="match_parent"
