--- a/android-application/ChineseCheckers/src/main/res/values/color.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/color.xml
@@ -2,11 +2,12 @@
 <resources>
 
     <color name="black">#000000</color>
-    <color name="red">#FF4444</color>
-    <color name="blue">#33B5E5</color>
-    <color name="green">#99CC00</color>
-    <color name="yellow">#FFF133</color>
-    <color name="purple">#AA66CC</color>
-    <color name="orange">#FFA600</color>
+    <color name="charcoal_hotseat_background">#161717</color>
+    <color name="red">#ED2C31</color>
+    <color name="blue">#1780C1</color>
+    <color name="green">#15A850</color>
+    <color name="yellow">#F8E816</color>
+    <color name="purple">#8601AF</color>
+    <color name="orange">#F89230</color>
 
 </resources>
