--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
@@ -16,7 +16,8 @@
         android:text="Test's Turn"
         android:id="@+id/hotseatCurrentPlayerTextView"/>
 
-    <SurfaceView
+    <ca.brocku.chinesecheckers.uiengine.GameBoardUiView
+        android:id="@+id/gameBoardSurface"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/hotseatCurrentPlayerTextView"
