--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
@@ -8,20 +8,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:gravity="center"
         android:background="@color/red"
-        android:textSize="40sp"
-        android:text="Test's Turn"
-        android:id="@+id/hotseatCurrentPlayerTextView"/>
+        android:textSize="@dimen/activity_large_text_size"
+        android:singleLine="true"
+        android:text="Waiting for :player_name (OR) Your Turn"
+        android:id="@+id/hotseatCurrentPlayerTextView" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="40dp"
+        android:src="@drawable/demo_game"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/logo"
+        android:layout_below="@+id/hotseatCurrentPlayerTextView"
+        android:layout_above="@+id/hotseatPlayerControlsLayout" />
+
+        <!--
     <SurfaceView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/red"
         android:layout_below="@+id/hotseatCurrentPlayerTextView"
-        android:layout_above="@+id/hotseatPlayerControlsLayout"
-        android:background="@color/charcoal_hotseat_background"/>
+        android:layout_above="@+id/hotseatPlayerControlsLayout" />
+        -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,6 +44,12 @@
         android:id="@+id/hotseatPlayerControlsLayout">
 
         <Button
+            android:padding="15dp"
+            android:background="@color/red"
+            android:textSize="@dimen/activity_xlarge_text_size"
+            android:textAllCaps="true"
+            android:gravity="right|center_horizontal"
+            android:drawableLeft="@drawable/ic_action_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -38,6 +57,12 @@
             android:id="@+id/hotseatMoveResetButton"/>
 
         <Button
+            android:padding="15dp"
+            android:background="@color/green"
+            android:textSize="@dimen/activity_xlarge_text_size"
+            android:textAllCaps="true"
+            android:gravity="right|center_horizontal"
+            android:drawableLeft="@drawable/ic_action_accept"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
