--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_main.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_main.xml
@@ -3,19 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
-    <TextView
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/app_name"
-        android:textSize="40sp"/>
+        android:layout_height="50dp" />
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center_horizontal" />
 
     <Space
         android:layout_width="match_parent"
@@ -25,7 +27,14 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:padding="5dp"
+        android:background="@drawable/chch_edittext_red"
+        android:gravity="center_vertical|right"
+        android:textSize="@dimen/activity_xlarge_text_size"
+        android:textColor="@color/app_background"
+        android:textAllCaps="true"
+        android:textStyle="bold"
         android:text="@string/hotseat"
-        android:id="@+id/hotseatConfigurationActivityButton"/>
+        android:id="@+id/hotseatConfigurationActivityButton" />
 
 </LinearLayout>
