--- a/android-application/ChineseCheckers/src/main/res/values/dimens.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    </resources>
+    <dimen name="activity_xsmall_text_size">10dp</dimen>
+    <dimen name="activity_small_text_size">14dp</dimen>
+    <dimen name="activity_normal_text_size">16dp</dimen>
+    <dimen name="activity_large_text_size">20dp</dimen>
+    <dimen name="activity_xlarge_text_size">28dp</dimen>
+    <dimen name="activity_xxlarge_text_size">32dp</dimen>
+</resources>
