Mockups v2 and accompanying resource files

--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
@@ -19,7 +19,7 @@
 
     <!--
         Uncomment next section and comment out the
-        SurfaceView to see demo image used in mackups
+        SurfaceView to see demo image used in mockups
     -->
 
     <!--
