--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button.xml
@@ -4,7 +4,7 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid  android:color="@color/app_button"/>
+            <solid  android:color="@color/app_button_pressed"/>
         </shape>
     </item>
 
