--- a/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
@@ -1,7 +1,38 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" />
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center_horizontal" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="5dp"
+        android:background="@drawable/chch_edittext_red"
+        android:gravity="center_vertical|right"
+        android:textSize="@dimen/activity_xlarge_text_size"
+        android:textColor="@color/app_background"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        android:text="@string/hotseat"
+        android:id="@+id/hotseatConfigurationActivityButton" />
+
+</LinearLayout>
