--- a/android-application/ChineseCheckers/src/main/res/layout/activity_hotseat_configuration.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_hotseat_configuration.xml
@@ -41,14 +41,14 @@
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp">
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp">
 
         <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:background="@color/app_background"
+            android:background="@drawable/chch_togglebutton"
             android:drawableTop="@drawable/ic_board_p2"
             android:gravity="center_horizontal"
             android:textSize="@dimen/activity_xsmall_text_size"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:background="@color/app_background"
+            android:background="@drawable/chch_togglebutton"
             android:drawableTop="@drawable/ic_board_p3"
             android:gravity="center_horizontal"
             android:textSize="@dimen/activity_xsmall_text_size"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:background="@color/app_background"
+            android:background="@drawable/chch_togglebutton"
             android:drawableTop="@drawable/ic_board_p4"
             android:gravity="center_horizontal"
             android:textSize="@dimen/activity_xsmall_text_size"
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:background="@color/app_background"
+            android:background="@drawable/chch_togglebutton"
             android:drawableTop="@drawable/ic_board_p6"
             android:gravity="center_horizontal"
             android:textSize="@dimen/activity_xsmall_text_size"
