--- a/android-application/ChineseCheckers/src/main/res/values/color.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
 
     <color name="app_background">#161717</color>
     <color name="app_text">#F2F4F7</color>
+    <color name="app_hint_text">#88292B2B</color>
 
     <color name="app_button">#292B2B</color>
     <color name="app_button_text">#F2F4F7</color>
