--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_edittext_red.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_edittext_red.xml
@@ -2,6 +2,20 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="5dip" />
+            <solid  android:color="@color/dark_red"/>
+        </shape>
+    </item>
+
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="5dip" />
+            <solid  android:color="@color/red"/>
+        </shape>
+    </item>
+
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="5dip" />
