--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_togglebutton.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_togglebutton.xml
@@ -5,7 +5,7 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="5dip" />
-            <solid  android:color="@color/app_button_pressed"/>
+            <solid  android:color="@color/black"/>
         </shape>
     </item>
 
