--- a/android-application/ChineseCheckers/src/main/res/layout/activity_hotseat_configuration.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_hotseat_configuration.xml
@@ -149,6 +149,10 @@
             android:id="@+id/hotseatRedPlayerError"/>
 
         <EditText
+            android:textColorHint="@color/app_hint_text"
+            android:gravity="center_vertical|left"
+            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left"
@@ -180,6 +184,10 @@
             android:id="@+id/hotseatOrangePlayerError"/>
 
         <EditText
+            android:textColorHint="@color/app_hint_text"
+            android:gravity="center_vertical|left"
+            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
@@ -209,6 +217,10 @@
             android:id="@+id/hotseatYellowPlayerError"/>
 
         <EditText
+            android:textColorHint="@color/app_hint_text"
+            android:gravity="center_vertical|left"
+            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
@@ -237,6 +249,10 @@
             android:id="@+id/hotseatGreenPlayerError"/>
 
         <EditText
+            android:textColorHint="@color/app_hint_text"
+            android:gravity="center_vertical|left"
+            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
@@ -267,6 +283,10 @@
             android:id="@+id/hotseatBluePlayerError"/>
 
         <EditText
+            android:textColorHint="@color/app_hint_text"
+            android:gravity="center_vertical|left"
+            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
@@ -296,6 +316,10 @@
             android:id="@+id/hotseatPurplePlayerError"/>
 
         <EditText
+            android:textColorHint="@color/app_hint_text"
+            android:gravity="center_vertical|left"
+            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
