--- a/android-application/ChineseCheckers/src/main/res/values/styles.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/styles.xml
@@ -10,7 +10,9 @@
         <item name="android:textSize">@dimen/activity_normal_text_size</item>
 
         <item name="android:buttonStyle">@style/Button</item>
-        <item name="android:editTextStyle">@style/EditText</item>
+
+        <!-- TODO bug: the following breaks the keyboard; it doesn't pop up -->
+        <!--<item name="android:editTextStyle">@style/EditText</item>-->
     </style>
 
     <style name="Button" parent="android:Theme.Holo.Light.DarkActionBar">
@@ -18,6 +20,7 @@
         <item name="android:background">@drawable/chch_button</item>
     </style>
 
+    <!-- TODO the following is manually entered for each EditText due to above bug -->
     <style name="EditText" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name="android:background">@drawable/chch_edittext</item>
         <item name="android:textColorHint">@color/app_hint_text</item>
