--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_hotseat_game.xml
@@ -49,7 +49,7 @@
 
         <Button
             android:padding="15dp"
-            android:background="@color/red"
+            android:background="@drawable/chch_button_reset"
             android:textSize="@dimen/activity_xlarge_text_size"
             android:textAllCaps="true"
             android:gravity="right|center_horizontal"
@@ -62,7 +62,7 @@
 
         <Button
             android:padding="15dp"
-            android:background="@color/green"
+            android:background="@drawable/chch_button_done"
             android:textSize="@dimen/activity_xlarge_text_size"
             android:textAllCaps="true"
             android:gravity="right|center_horizontal"
