--- a/android-application/ChineseCheckers/src/main/res/values/color.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/color.xml
@@ -26,5 +26,5 @@
     <color name="dark_purple">#5E0087</color>
     <color name="orange">#F89230</color>
     <color name="dark_orange">#D06A08</color>
-
+    <color name="gray">#3E3F3F</color>
 </resources>
