--- a/android-application/ChineseCheckers/src/main/res/layout/activity_hotseat_configuration.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_hotseat_configuration.xml
@@ -156,7 +156,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
             android:hint="Player 1"
             android:layout_marginRight="40dp"
             android:singleLine="true"
@@ -192,7 +192,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
             android:singleLine="true"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
             android:background="@drawable/chch_edittext_orange"
             android:textColor="@color/app_background"
             android:id="@+id/hotseatOrangePlayerNameEditText"/>
@@ -225,7 +225,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
             android:singleLine="true"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
             android:background="@drawable/chch_edittext_yellow"
             android:textColor="@color/app_background"
             android:id="@+id/hotseatYellowPlayerNameEditText"/>
@@ -256,7 +256,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
             android:hint="Player 2"
             android:singleLine="true"
             android:background="@drawable/chch_edittext_green"
@@ -290,7 +290,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
             android:singleLine="true"
             android:background="@drawable/chch_edittext_blue"
             android:textColor="@color/app_background"
@@ -323,7 +323,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="40dp"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
             android:singleLine="true"
             android:background="@drawable/chch_edittext_purple"
             android:textColor="@color/app_background"
