--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_togglebutton.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_togglebutton.xml
@@ -6,6 +6,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="5dip" />
             <solid  android:color="@color/black"/>
+            <stroke android:width="1dp" android:color="@color/app_button"/>
         </shape>
     </item>
 
