--- a/android-application/ChineseCheckers/src/main/res/menu/offline_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/menu/offline_game.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ca.brocku.chinesecheckers.HotseatConfigurationActivity" >
+    tools:context="ca.brocku.chinesecheckers.OfflineGameActivity" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
