--- a/android-application/ChineseCheckers/src/main/res/menu/main.xml
+++ b/android-application/ChineseCheckers/src/main/res/menu/main.xml
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ca.brocku.chinesecheckers.OfflineConfigurationActivity" >
+    tools:context="ca.brocku.chinesecheckers.MainActivity">
 
     <item android:id="@+id/action_help"
         android:title="@string/action_help"
