--- a/android-application/ChineseCheckers/src/main/res/layout/activity_static_page.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_static_page.xml
@@ -36,49 +36,62 @@
         already done so.
     -->
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Header 1"
-        android:textSize="@dimen/activity_xlarge_text_size"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Header 2"
-        android:textSize="@dimen/activity_large_text_size"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/lorem_ipsum"
-        android:textSize="@dimen/activity_normal_text_size"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Header 1"
+                android:textSize="@dimen/activity_xlarge_text_size"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_marginBottom="20dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/lorem_ipsum"
-        android:textSize="@dimen/activity_normal_text_size"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Header 2"
+                android:textSize="@dimen/activity_large_text_size"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/lorem_ipsum"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/lorem_ipsum"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
 
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="30dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
