--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button_square_green.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button_square_green.xml
@@ -2,18 +2,31 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--Button pressed-->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid  android:color="@color/dark_green"/>
         </shape>
     </item>
-
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid  android:color="@color/green"/>
         </shape>
     </item>
 
+    <!--ToggleButton on and off-->
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <solid  android:color="@color/dark_green"/>
+        </shape>
+    </item>
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <solid  android:color="@color/green"/>
+        </shape>
+    </item>
+
+    <!--default-->
     <item>
         <shape android:shape="rectangle">
             <solid  android:color="@color/green"/>
