--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button_square_right_red.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button_square_right_red.xml
@@ -2,13 +2,13 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--Button pressed-->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="5dip" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>
             <solid  android:color="@color/dark_red"/>
         </shape>
     </item>
-
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <corners android:radius="5dip" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>
@@ -16,6 +16,21 @@
         </shape>
     </item>
 
+    <!--ToggleButton on and off-->
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="5dip" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>
+            <solid android:color="@color/dark_red"/>
+        </shape>
+    </item>
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="5dip" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>
+            <solid android:color="@color/red"/>
+        </shape>
+    </item>
+
+    <!--default-->
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="5dip" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>
