--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button_dialog_left.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_button_dialog_left.xml
@@ -5,18 +5,21 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid  android:color="@color/app_button_pressed"/>
+            <corners android:bottomLeftRadius="3dp"/>
         </shape>
     </item>
 
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid  android:color="@color/app_button_pressed"/>
+            <corners android:bottomLeftRadius="3dp"/>
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
             <solid  android:color="@color/app_button"/>
+            <corners android:bottomLeftRadius="3dp"/>
         </shape>
     </item>
 
