--- a/android-application/ChineseCheckers/src/main/res/values/color.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/color.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="app_background">#161717</color>
+    <color name="app_background_translucent">#BB161717</color>
     <color name="app_text">#F2F4F7</color>
     <color name="app_hint_text">#88292B2B</color>
 
