--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game_resume_dialog.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game_resume_dialog.xml
@@ -6,8 +6,9 @@
     android:orientation="vertical"
     android:layout_marginLeft="@dimen/dialog_margin"
     android:layout_marginRight="@dimen/dialog_margin"
+    android:padding="2dp"
     android:layout_gravity="center"
-    android:background="@color/app_background">
+    android:background="@drawable/chch_dialog_shadow">
 
     <TextView
         android:layout_width="match_parent"
