--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
@@ -11,10 +11,10 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:gravity="center"
-        android:background="@color/red"
+        android:background="@color/black"
         android:textSize="@dimen/activity_large_text_size"
         android:singleLine="true"
-        android:text="Waiting for :player_name (OR) Your Turn"
+        android:text="@string/waiting_title_bar"
         android:id="@+id/offlineCurrentPlayerTextView" />
 
     <!--
