--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +14,7 @@
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
         android:textSize="@dimen/activity_xlarge_text_size"
-        android:id="@+id/offlineGameEndTitle"/>
+        android:id="@+id/dialogTitle"/>
 
     <ImageView
         android:layout_width="match_parent"
@@ -27,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="@string/end_game_dialog_text"/>
+        android:id="@+id/dialogMessage"/>
 
     <ImageView
         android:layout_width="match_parent"
@@ -46,11 +44,10 @@
             android:layout_weight="1"
             android:gravity="center"
             android:background="@drawable/chch_button_dialog_left"
-            android:text="@string/end_game_dialog_home"
             android:textColor="@color/app_text"
             android:textAllCaps="true"
             android:textStyle="bold"
-            android:id="@+id/offlineGameEndToHomeButton" />
+            android:id="@+id/dialogCancelButton" />
 
         <ImageView
             android:layout_width="1dp"
@@ -64,11 +61,10 @@
             android:layout_weight="1"
             android:gravity="center"
             android:background="@drawable/chch_button_dialog_right"
-            android:text="@string/end_game_dialog_new"
             android:textColor="@color/app_text"
             android:textAllCaps="true"
             android:textStyle="bold"
-            android:id="@+id/offlineGameEndToNewButton"/>
+            android:id="@+id/dialogAcceptButton"/>
 
     </LinearLayout>
 
