--- a/android-application/ChineseCheckers/src/main/res/layout/activity_offline_configuration.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_offline_configuration.xml
@@ -58,7 +58,7 @@
             android:textOn="2 Players"
             android:textOff="2 Players"
             android:checked="true"
-            android:id="@+id/offlineTwoPlayerButton"
+            android:id="@+id/twoPlayerButton"
             android:singleLine="false" />
 
         <Space
@@ -79,7 +79,7 @@
             android:textColor="@color/app_button_text"
             android:textOn="3 Players"
             android:textOff="3 Players"
-            android:id="@+id/offlineThreePlayerButton"/>
+            android:id="@+id/threePlayerButton"/>
 
         <Space
             android:layout_weight="1"
@@ -99,7 +99,7 @@
             android:textColor="@color/app_button_text"
             android:textOn="4 Players"
             android:textOff="4 Players"
-            android:id="@+id/offlineFourPlayerButton"/>
+            android:id="@+id/fourPlayerButton"/>
 
         <Space
             android:layout_weight="1"
@@ -119,7 +119,7 @@
             android:textColor="@color/app_button_text"
             android:textOn="6 Players"
             android:textOff="6 Players"
-            android:id="@+id/offlineSixPlayerButton"/>
+            android:id="@+id/sixPlayerButton"/>
 
         <Space
             android:layout_weight="1"
