--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/offline_move_reset"
-            android:id="@+id/offlineMoveResetButton"/>
+            android:id="@+id/gameMoveResetButton"/>
 
         <Button
             android:padding="15dp"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/offline_move_done"
-            android:id="@+id/offlineMoveDoneButton"/>
+            android:id="@+id/gameMoveDoneButton"/>
 
     </LinearLayout>
 
