--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
@@ -13,6 +13,8 @@
         android:gravity="center"
         android:background="@color/black"
         android:textSize="@dimen/activity_large_text_size"
+        android:textColor="@color/app_background"
+        android:textStyle="bold"
         android:singleLine="true"
         android:text="@string/waiting_title_bar"
         android:id="@+id/gamePlayerListButton" />
